--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <div id="app">
             <h1>{{ greeting }}</h1>
-            <img src="" alt="#">
+            <img :src="photo" alt="#">
         </div>
 
         <script src="main.js"></script>
